# ct_arms_pkg

./: README.md
eyou_description/: package.xml  setup.cfg  setup.py
eyou_description/launch/: display.launch.py
eyou_description/meshes/: link1.STL  link10.STL  link11.STL  link12.STL  link2.STL  link3.STL  link4.STL  link5.STL  link6.STL  link7.STL  link8.STL  link9.STL
eyou_description/urdf/: eyou.urdf
eyou_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
eyou_moveit_config/config/: eyou_arm.ros2_control.xacro  eyou_arm.srdf  eyou_arm.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  ros2_controllers.yaml
eyou_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
eyou_ros2_control/: CMakeLists.txt  package.xml  plugin_description.xml
eyou_ros2_control/c++源码/: eyou  eyou.cpp  eyou.h
eyou_ros2_control/config/: eyou_controllers.yaml
eyou_ros2_control/include/eyou_ros2_control/: eyou.h  eyou_system.hpp
eyou_ros2_control/launch/: eyou_control.launch.py
eyou_ros2_control/src/: eyou_system.cpp
eyou_ros2_control/urdf/: eyou_motor.urdf
