<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypes="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>eyou_ros2_control</name>
  <version>0.0.0</version>
  <description>Dual 6DOF arm ros2_control hardware driver with CAN bus</description>
  <maintainer email="xxx@xxx.com">user</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>ros2_control</depend>
  <depend>ros2_controllers</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>controller_manager</depend>
  <depend>eyou_description</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
